--- a/package.json
+++ b/package.json
@@ -7,18 +7,36 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run My-Website-FE:serve-ssr",
+    "serve:ssr": "node dist/My-Website-FE/server/main.js",
+    "build:ssr": "ng build --prod && ng run My-Website-FE:server:production",
+    "prerender": "ng run My-Website-FE:prerender"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.0",
-    "@angular/common": "~9.1.0",
+    "@angular/cdk": "^9.2.4",
+    "@angular/common": "^9.1.11",
     "@angular/compiler": "~9.1.0",
-    "@angular/core": "~9.1.0",
+    "@angular/core": "^9.1.11",
     "@angular/forms": "~9.1.0",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
+    "@angular/platform-server": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@ngrx/effects": "^9.2.0",
+    "@ngrx/store": "^9.2.0",
+    "@nguniversal/express-engine": "^9.1.1",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
+    "@popperjs/core": "^2.4.2",
+    "bootstrap": "^4.5.0",
+    "express": "^4.15.2",
+    "jquery": "^3.5.1",
+    "jwt-decode": "^2.2.0",
+    "ngx-countup": "^7.3.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -28,18 +46,20 @@
     "@angular/cli": "~9.1.0",
     "@angular/compiler-cli": "~9.1.0",
     "@angular/language-service": "~9.1.0",
-    "@types/node": "^12.11.1",
+    "@nguniversal/builders": "^9.1.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.4.1",
+    "karma": "^5.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.3",
+    "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
