started security module

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@angular/platform-browser-dynamic": "~10.0.1",
     "@angular/platform-server": "~10.0.1",
     "@angular/router": "~10.0.1",
+    "@fortawesome/angular-fontawesome": "^0.6.1",
+    "@fortawesome/fontawesome-common-types": "^0.2.29",
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@ngrx/effects": "^9.2.0",
     "@ngrx/store": "^9.2.0",
     "@nguniversal/express-engine": "^10.0.0",
